--- a/_posts/books/2016.markdown
+++ b/_posts/books/2016.markdown
@@ -1,7 +1,8 @@
 ---
-layout: page
-title: 2016-Books
-permalink: /books/2016/
+layout: post
+title:  "2016 Books"
+date:   2016 
+categories: jekyll update
 ---
 
 * Die Blaue Liste - Wolfgang Schorlau 
